# role-based-user-control

./: Dockerfile  Dockerfile.local  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup_local_enviroment
.github/workflows/: CD_role_based_app_stg.yml  CI_kaumer-backend-general.yml  CI_role-based-app-general.yml
UML-Diagrams/C4-Diagram/: kaumer_C4_level1.puml  kaumer_C4_level2.puml
UML-Diagrams/deploy-diagram/: deploy_diagram.puml
infrastructure/ci-cd/: main.tf
infrastructure/common/api-gateway/: main.tf  output.tf  variables.tf
infrastructure/common/ecr_lambda/: main.tf  output.tf
infrastructure/common/lambda/: main.tf  variables.tf
infrastructure/environment/: main.tf  outputs.tf  variables.tf
infrastructure/prod/: main.tf  output.tf  variables.tf
infrastructure/staging/: main.tf
infrastructure/state/: main.tf  outputs.tf
migrations/: env.py
migrations/versions/: e4c8c8797567_user_setup.py
role_based_app/: main.py
role_based_app/shared/commons/: utils.py
role_based_app/users/: lambda_handler.py  user_router.py
role_based_app/users/application/: user_getter.py  user_login.py  user_new_password.py  user_phone_message.py  user_signup.py  user_verification.py
role_based_app/users/infrastructure/: user_controller.py
tests/: conftest.py
tests/integration/_factories/: db_factory.py  user_factory.py
tests/integration/infrastructure/: sample_response.py  user_repository_test.py
tests/integration/shared/: auth_bearer_test.py
tests/unit/_factories/: __init__.py  db_factory.py  user_factory.py
(+41 files in other folders)
